# ibkr-client-portal-docker

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  conf.beta.yaml  conf.yaml  docker-compose.yaml  pyproject.toml  start-beta.sh  start.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  KALI_VPS.md
examples/: aapl_contract_info.py
scripts/: docker-entrypoint.sh  install-systemd.sh  read_only_check.py  setup-kali-host.sh  wait_for_gateway.py  wait_for_login.py
src/ibkr_client_portal_docker/: __init__.py  client.py  config.py  keepalive.py  readiness.py  redaction.py  remote_login.py  smoke.py
src/ibkr_client_portal_docker/cli/: keepalive.py  read_only_check.py  remote_login.py  wait_for_gateway.py  wait_for_login.py
tests/: test_client.py  test_config.py  test_container_config.py  test_keepalive.py  test_readiness.py  test_redaction.py  test_remote_login.py  test_smoke.py
