[project]
name = "ibkr-client-portal-docker"
version = "0.1.0"
description = "Local Docker baseline for IBKR Client Portal Gateway experiments."
requires-python = ">=3.10"
dependencies = [
    "playwright>=1.51.0",
    "requests>=2.32.0",
    "urllib3>=2.0.0",
]

[project.scripts]
ibkr-keepalive = "ibkr_client_portal_docker.cli.keepalive:main"
ibkr-read-only-check = "ibkr_client_portal_docker.cli.read_only_check:main"
ibkr-remote-login = "ibkr_client_portal_docker.cli.remote_login:main"
ibkr-wait-for-gateway = "ibkr_client_portal_docker.cli.wait_for_gateway:main"
ibkr-wait-for-login = "ibkr_client_portal_docker.cli.wait_for_login:main"

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ibkr_client_portal_docker"]

[tool.pytest.ini_options]
addopts = "--cov=ibkr_client_portal_docker --cov-report=term-missing --cov-fail-under=80"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.coverage.run]
omit = [
    "src/ibkr_client_portal_docker/cli/*",
]
